removed overflow which is cuasing issues on safari for markdown editor fullscreen mode

--- a/packages/exmg-form-drawer/styles/exmg-drawer-styles.scss
+++ b/packages/exmg-form-drawer/styles/exmg-drawer-styles.scss
@@ -1,4 +1,4 @@
-@import "@material/typography/mixins";
+@import '@material/typography/mixins';
 
 $exmg-drawer-color: #02182b;
 $exmg-drawer-bg-color: #ffffff;
@@ -12,7 +12,6 @@ $exmg-drawer-bg-color: #ffffff;
     right: 0;
     bottom: 0;
     width: 100%;
-    overflow: auto;
     box-shadow: none;
 
     color: var(--exmg-drawer-color, var(--mdc-theme-on-surface, $exmg-drawer-color));
